fixing alignment for start button

--- a/styles.css
+++ b/styles.css
@@ -71,13 +71,15 @@ input {
 }
 
 #start-button {
-	padding-right: 10px;
 	width: 200px;
 	height: 80px;
 	font-size: 50px;
 	font-weight: normal;
 	border-radius: 60px;
-	margin-top: 0px;
+	margin: 0 auto;
+	text-align: center;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 #player-order-container {
